add Maplewood to experience page and fix typos

--- a/resume.html
+++ b/resume.html
@@ -82,6 +82,8 @@
                                             <li><a class="dropdown-item" href="#Teaching">Teaching</a></li>
                                             <li><a class="dropdown-item" href="#MusicPerformance">Music Performance</a>
                                             </li>
+                                            <li><a class="dropdown-item" href="#HumanServices">Human Services/Healthcare</a>
+                                            </li>
 
                                         </ul>
 
@@ -154,21 +156,26 @@
                                     <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                         <div class="bg-light p-4 rounded-4">
                                             <div class="text-primary fw-bolder mb-2">March 2024-present</div>
-                                            <div class="small fw-bolder">Junior Developer & Content Creator</div>
-                                            <div class="small text-muted"><a href="https://www.linkedin.com/company/advocacy-resources/" target="_blank">ADVO</a>-Advocacy Resources 501(c)(3)</div>
+                                            <div class="small fw-bolder">Chief of Staff</div>
+                                            <div class="small text-muted">Advocacy Resources 501(c)(3)</div>
                                             <div class="small text-muted"><em>Remote</em></div>
                                         </div>
                                     </div>
                                     <div class="col-lg-8">
+                                        <div><p><a href="https://www.myadvo.org/" target="_blank">Advocacy Resources</a> is a non-profit whose mission is to provide a safe and empowering platform for people to connect with vetted resources and organizations, ensuring they receive the support and guidance needed to navigate life’s challenges, confidently and anonymously.</p>
+                                            <p>My responsibilities include</p>
+                                        </div>
                                         <div>
                                             <ul>
-                                                <li class="mb-2">Working with Lead Developer to investigate appropriate technologies for web application that will serve curated search results to users who are looking for vetted resources related to mental health, physical health, and social issues
+                                                <li class="mb-2">Working with the Lead Developer on developing a web application that will serve curated search results to users who are looking for vetted resources related to mental health, physical health, and social issues
                                                 </li>
-                                                <li class="mb-2">Write copy for social media posts
+                                                <li class="mb-2">Assist with administrative tasks
                                                 </li>
-                                                <li class="mb-2">Design graphics for social media posts using Canva (examples available upon request)
+                                                <li class="mb-2">Contribute to planning
                                                 </li>
-                                                <li>Collaborate with team on marketing strategies
+                                                <li class="mb-2">Help implement new ideas
+                                                </li>
+                                                <li class="mb-2">Attend meetings
                                                 </li>
                                             </ul>
                                         </div>
@@ -255,13 +262,10 @@
                                     <div class="col-lg-8">
                                         <div>
                                             <p>Over the course of two years, I worked as a contract writer for the
-                                                bi-weekly independent newspaper the <em>Oklahoma Gazette</em>. At the
-                                                time that I was writing for them, they published hardcopy issues and
-                                                digital issues of the paper, but in 2023, they went fully digital with
-                                                their publications.</p>
+                                                bi-weekly independent newspaper the <em>Oklahoma Gazette</em>.</p>
                                             <p>I had a lot of autonomy in this job. I chose topics on local happenings
                                                 and pitched my ideas to the Editor-in-Chief. On rare occasions, the
-                                                Editor assigned topics to me. Once the topics got a greenlight, I'd
+                                                Editor assigned topics to me. Once the topics got a green light, I'd
                                                 compose interview questions, if necessary, and reach out to the subjects
                                                 of the article to conduct interviews. Then I'd write the article and
                                                 send it over to the Editor for notes, and we'd collaborate on the final
@@ -298,7 +302,7 @@
                                                         coordinator interviewed the clients to get information about
                                                         their business, including their mission and target market. Then
                                                         I would watch recordings of the interviews and craft copy for
-                                                        the client's commerical website. <em>Web copy samples available
+                                                        the client's commercial website. <em>Web copy samples available
                                                             upon request.</em></p>
                                                 </li>
                                                 <li>
@@ -383,16 +387,16 @@
                                                 faculty member. I taught Music Theory I & II, Aural Skills (Ear
                                                 Training) I & II, and Oboe Lessons.</p>
                                             <p>In addition to teaching duties, I mentored students in office hours,
-                                                performed concerts regularly with collegues, and taught masterclasses on
+                                                performed concerts regularly with colleagues, and taught masterclasses on
                                                 campus, regionally, and around the world. My travels on behalf of the
                                                 university took me to China, Germany, and Thailand.</p>
-                                            <p>I also maintainted a busy freelance performance schedule off-campus.
+                                            <p>I also maintained a busy freelance performance schedule off-campus.
                                                 (More about that in the Music Performance section.)</p>
                                             <p>Each semester, I served on committees at multiple levels across the
                                                 University's organization. I served on Faculty Senate for four years and
                                                 Chaired the Personnel and Policies Committee on the Senate for three
                                                 years. During this service, our committee investigated faculty pay
-                                                inequities, questioned administrators about the inequitites, and brought
+                                                inequities, questioned administrators about the inequities, and brought
                                                 our findings to the Senate in order to begin working on solutions toward
                                                 more equitable faculty pay across campus.</p>
                                             <p>My faculty ranks over the years included adjunct instructor,
@@ -430,7 +434,7 @@
                                             <p>I taught music classes and yoga classes to campers of all ages in
                                                 30-minute rotating sessions. I tailored each session to be
                                                 age-appropriate and provided space in each lesson for creativity and
-                                                relfection.</p>
+                                                reflection.</p>
                                             </p>
                                         </div>
                                     </div>
@@ -484,7 +488,7 @@
                                             <p>I created flexible lesson plans depending on students' ability levels,
                                                 preparation levels (how much they practiced), and interests (styles of
                                                 music they liked and personal goals).</p>
-                                            <p>I engaged in adminstrative responsibilites including maintaining payment
+                                            <p>I engaged in administrative responsibilities including maintaining payment
                                                 records and tax documents.</p>
                                         </div>
                                     </div>
@@ -593,7 +597,7 @@
                                             <p>The project later morphed into a wider range of timbres and textures
                                                 produced with electronic sounds and digital techniques.</p>
                                             <p>I have composed and arranged all the music for this project, and it has
-                                                given me an excellent space to explore sound outside the contraints of
+                                                given me an excellent space to explore sound outside the constraints of
                                                 Classical music traditions.</p>
                                             <p>These are the albums that have been released under the Quantum Calm
                                                 project:</p>
@@ -607,6 +611,58 @@
                                                 <li><a href="https://open.spotify.com/album/4hdWublwDEbYGeNQrH1YVA?si=bmywBRqtTcCJHYMxmYR8lA"
                                                         target="_blank">Inhale, Exhale</a>, 2011</li>
                                             </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                     <!-- Experience - Human Services/Healthcare Section-->
+                     <section>
+                        <div class="d-flex flex-wrap align-items-center justify-content-between mb-4">
+                            <h2 id="HumanServices" class="text-primary fw-bolder mb-0">Experience - Human Services/Healthcare</h2>
+                        </div>
+                        <!-- Experience Card 1-->
+                        <div class="card shadow border-0 rounded-4 mb-5">
+                            <div class="card-body p-5">
+                                <div class="row flex-wrap gx-5">
+                                    <div class="col text-center text-lg-start mb-4 mb-lg-0">
+                                        <div class="bg-light p-4 rounded-4">
+                                            <div class="text-primary fw-bolder mb-2">July 2024-present</div>
+                                            <div class="small fw-bolder">Dietary Services and Activities</div>
+                                            <div class="small text-muted"><em>Maplewood Gardens Independent and Assisted Living</em></div>
+                                            <div class="small text-muted">Spokane, WA</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-8">
+                                        <div>
+                                            <p>I fill a few roles at <a href="https://www.carepartnersliving.com/maplewood-gardens/" target="_blank">Maplewood Gardens</a>:</p>
+                                            <p><strong>Activities Coordinator</strong></p>
+                                            <ul>
+                                                <li class="mb-2">Lead activities, including music, art, social events, resident council meetings, etc.</li>
+                                                <li class="mb-2">Plan activities and gather supplies</li>
+                                                <li class="mb-2">Encourage residents to attend activities, especially new or shy residents or residents with memory challenges</li>
+                                                <li class="mb-2">Set up, clean, and reset common areas where activities take place</li>
+                                                <li class="mb-2">Follow safe food handling procedures when refreshments are available at activities</li>
+                                            </ul>
+                                            <p><strong>Prep Cook</strong></p>
+                                            <ul>
+                                                <li class="mb-2">Prepare ingredients for sandwiches and salads: slice/chop vegetables, slice deli meats, hot dogs, cheese, etc.</li>
+                                                <li class="mb-2">Maintain drink machines and keep them filled with a variety of options</li>
+                                                <li class="mb-2">Prepare residents' orders on the line during meal services</li>
+                                                <li class="mb-2">Prepare snacks for diabetic residents and stock refrigerator with them in med tech office</li>
+                                                <li class="mb-2">Keep ingredients properly labeled, including dates</li>
+                                                <li class="mb-2">Rotate stock</li>
+                                            </ul>
+                                            <p><strong>Server</strong></p>
+                                            <ul>
+                                                <li class="mb-2">Interact with residents during meal services while maintaining friendly demeanor and professionalism</li>
+                                                <li class="mb-2">Take orders and deliver them to residents in dining room or in their apartments, depending on level of care needed</li>
+                                                <li class="mb-2">Properly clear and sanitize tables, including items on the table</li>
+                                                <li class="mb-2">Keep tables well-stocked with creamer, salt, pepper, sweeteners, current menus, etc.</li>
+                                                <li class="mb-2">Dispose of garbage/recycling, sweep, mop, wash dishes, etc.</li>
+                                            </ul>
+                                            
                                         </div>
                                     </div>
                                 </div>
@@ -710,7 +766,7 @@
                                     <div class="col-lg-8">
                                         <div>
                                             <p>It was during my undergrad education that I learned to juggle many
-                                                simultaneous performance responsibilities. I played princpal oboe in the
+                                                simultaneous performance responsibilities. I played principal oboe in the
                                                 Wind Symphony, Symphony Orchestra, and pit orchestras. I also performed
                                                 with the student Wind Quintet and had the pleasure of performing on two
                                                 separate occasions at Carnegie Hall with UCO ensembles.</p>
