added a clarifying word

--- a/resume.html
+++ b/resume.html
@@ -639,7 +639,7 @@
                                             <p>I fill a few roles at <a href="https://www.carepartnersliving.com/maplewood-gardens/" target="_blank">Maplewood Gardens</a>:</p>
                                             <p><strong>Activities Coordinator</strong></p>
                                             <ul>
-                                                <li class="mb-2">Lead activities, including music, art, social events, resident council meetings, etc.</li>
+                                                <li class="mb-2">Lead/facilitate activities, including music, art, social events, resident council meetings, etc.</li>
                                                 <li class="mb-2">Plan activities and gather supplies</li>
                                                 <li class="mb-2">Encourage residents to attend activities, especially new or shy residents or residents with memory challenges</li>
                                                 <li class="mb-2">Set up, clean, and reset common areas where activities take place</li>
