made updates to minimize focus on web dev work while applying to another job

--- a/resume.html
+++ b/resume.html
@@ -104,12 +104,12 @@
                                         </ul>
                                         <!-- Download resume button-->
                                         <!-- Note: Set the link href target to a PDF file within your project-->
-                                        <a class="btn btn-outline-primary px-4"
+                                        <!-- <a class="btn btn-outline-primary px-4"
                                             href="assets/Resume-from-KaDee-Bramlett-Portfolio-Website.pdf"
                                             target="_blank">
                                             <div class="d-inline-block bi bi-download me-2"></div>
                                             Download Resume
-                                        </a>
+                                        </a> -->
                                     </div>
                                 </div>
                             </div>
@@ -140,10 +140,7 @@
                                                 adding new technologies to my tool belt all the time. (See the
                                                 Projects page for more information on what
                                                 I've built.)</p>
-                                            <p>After many years as a music professor and professional oboe player, I
-                                                would like to focus on deepening my knowledge in web development and
-                                                make it my new career.
-                                            </p>
+                                            
                                         </div>
                                     </div>
                                 </div>
@@ -162,8 +159,8 @@
                                         </div>
                                     </div>
                                     <div class="col-lg-8">
-                                        <div><p><a href="https://www.myadvo.org/" target="_blank">Advocacy Resources</a> is a non-profit whose mission is to provide a safe and empowering platform for people to connect with vetted resources and organizations, ensuring they receive the support and guidance needed to navigate life’s challenges, confidently and anonymously.</p>
-                                            <p>My responsibilities include</p>
+                                        <div><p><a href="https://www.myadvo.org/" target="_blank">Advocacy Resources</a> is a nonprofit whose mission is to provide a safe and empowering platform for people to connect with vetted resources and organizations, ensuring they receive the support and guidance needed to navigate life’s challenges, confidently and anonymously.</p>
+                                            <p>My responsibilities in this volunteer position include</p>
                                         </div>
                                         <div>
                                             <ul>
@@ -658,7 +655,7 @@
                                             <ul>
                                                 <li class="mb-2">Interact with residents during meal services while maintaining friendly demeanor and professionalism</li>
                                                 <li class="mb-2">Take orders and deliver them to residents in dining room or in their apartments, depending on level of care needed</li>
-                                                <li class="mb-2">Properly clear and sanitize tables, including items on the table</li>
+                                                <li class="mb-2">Properly clear and sanitize tables, including items on the table (napkin dispensers, salt/pepper shakers, etc.)</li>
                                                 <li class="mb-2">Keep tables well-stocked with creamer, salt, pepper, sweeteners, current menus, etc.</li>
                                                 <li class="mb-2">Dispose of garbage/recycling, sweep, mop, wash dishes, etc.</li>
                                             </ul>
@@ -928,11 +925,11 @@
                     </section>
                     <!-- Download resume button-->
                     <!-- Note: Set the link href target to a PDF file within your project-->
-                    <a class="btn btn-primary px-4 py-3" href="assets/Resume-from-KaDee-Bramlett-Portfolio-Website.pdf"
+                    <!-- <a class="btn btn-primary px-4 py-3" href="assets/Resume-from-KaDee-Bramlett-Portfolio-Website.pdf"
                         target="_blank">
                         <div class="d-inline-block bi bi-download me-2"></div>
                         Download Resume
-                    </a>
+                    </a> -->
                 </div>
             </div>
         </div>
