--- a/resume.html
+++ b/resume.html
@@ -636,11 +636,13 @@
                                             <p>I fill a few roles at <a href="https://www.carepartnersliving.com/maplewood-gardens/" target="_blank">Maplewood Gardens</a>:</p>
                                             <p><strong>Activities Coordinator</strong></p>
                                             <ul>
+                                                <li class="mb-2">Design, develop, and plan activities and gather necessary supplies</li>
                                                 <li class="mb-2">Lead/facilitate activities, including music, art, social events, resident council meetings, etc.</li>
-                                                <li class="mb-2">Plan activities and gather supplies</li>
                                                 <li class="mb-2">Encourage residents to attend activities, especially new or shy residents or residents with memory challenges</li>
                                                 <li class="mb-2">Set up, clean, and reset common areas where activities take place</li>
                                                 <li class="mb-2">Follow safe food handling procedures when refreshments are available at activities</li>
+                                                <li class="mb-2">Report to Activities Director and fulfill tasks based on their instructions</li>
+                                                <li class="mb-2">Make appropriate adjustments to activities offerings based on resident feedback to ensure the best enrichment experiences</li>
                                             </ul>
                                             <p><strong>Prep Cook</strong></p>
                                             <ul>
