Updated responsibilities on Resume

--- a/resume.html
+++ b/resume.html
@@ -652,6 +652,7 @@
                                                 <li class="mb-2">Prepare snacks for diabetic residents and stock refrigerator with them in med tech office</li>
                                                 <li class="mb-2">Keep ingredients properly labeled, including dates</li>
                                                 <li class="mb-2">Rotate stock</li>
+                                                <li class="mb-2">Collaborate with Dietary Director and kitchen leadership team in Chef's Meetings on updating in-kitchen workflows, developing dining room policies, and self-assessment of compliance with state regulations.</li>
                                             </ul>
                                             <p><strong>Server</strong></p>
                                             <ul>
