added Peters Creek to resume

--- a/resume.html
+++ b/resume.html
@@ -625,7 +625,47 @@
                                 <div class="row flex-wrap gx-5">
                                     <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                         <div class="bg-light p-4 rounded-4">
-                                            <div class="text-primary fw-bolder mb-2">July 2024-present</div>
+                                            <div class="text-primary fw-bolder mb-2">Jan 2024-present</div>
+                                            <div class="small fw-bolder">Activities Assistant & Concierge</div>
+                                            <div class="small text-muted"><em>Peters Creek Retirement Center & Memory Care</em></div>
+                                            <div class="small text-muted">Redmond, WA</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-8">
+                                        <div>
+                                            <p>I fill a couple roles at <a href="https://peters-creek.com/" target="_blank">Peters Creek</a>:</p>
+                                            <p><strong>Activities Assistant</strong></p>
+                                            <ul>
+                                                <li class="mb-2">Design, develop, and plan activities and gather necessary supplies</li>
+                                                <li class="mb-2">Lead/facilitate activities, including music, art, social events, arts & crafts, etc.</li>
+                                                <li class="mb-2">Encourage residents to attend activities, especially new or shy residents or residents with memory challenges</li>
+                                                <li class="mb-2">Set up, clean, and reset common areas where activities take place</li>
+                                                <li class="mb-2">Follow safe food handling procedures when serving refreshments at activities</li>
+                                                <li class="mb-2">Report to Activities Director and fulfill tasks based on their instructions</li>
+                                                <li class="mb-2">Make appropriate adjustments to activities offerings based on resident feedback to ensure the best enrichment experiences</li>
+                                            </ul>
+                                            
+                                            <p><strong>Concierge</strong></p>
+                                            <ul>
+                                                <li class="mb-2">Interact with residents and visitors while maintaining friendly demeanor and professionalism</li>
+                                                <li class="mb-2">Answer questions, phone calls, and emails</li>
+                                                <li class="mb-2">Schedule transportation for residents' medical appointments</li>
+                                                <li class="mb-2">Keep lobby tidy</li>
+                                                <li class="mb-2">Maintain current daily schedules and menus for display in lobby</li>
+                                            </ul>
+                                            
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Experience Card 2-->
+                        <div class="card shadow border-0 rounded-4 mb-5">
+                            <div class="card-body p-5">
+                                <div class="row flex-wrap gx-5">
+                                    <div class="col text-center text-lg-start mb-4 mb-lg-0">
+                                        <div class="bg-light p-4 rounded-4">
+                                            <div class="text-primary fw-bolder mb-2">July 2024-December 2024</div>
                                             <div class="small fw-bolder">Dietary Services and Activities</div>
                                             <div class="small text-muted"><em>Maplewood Gardens Independent and Assisted Living</em></div>
                                             <div class="small text-muted">Spokane, WA</div>
@@ -633,7 +673,7 @@
                                     </div>
                                     <div class="col-lg-8">
                                         <div>
-                                            <p>I fill a few roles at <a href="https://www.carepartnersliving.com/maplewood-gardens/" target="_blank">Maplewood Gardens</a>:</p>
+                                            <p>I filled a few roles at <a href="https://www.carepartnersliving.com/maplewood-gardens/" target="_blank">Maplewood Gardens</a>:</p>
                                             <p><strong>Activities Coordinator</strong></p>
                                             <ul>
                                                 <li class="mb-2">Design, develop, and plan activities and gather necessary supplies</li>
